<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TaskDetailScreenActivity"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="Home Maintenance List"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <Space
            android:layout_width="95dp"
            android:layout_height="33dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/etItemTitle"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/no_padding"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbComplete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/complete"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Bottom Border -->
    <View
        android:id="@+id/vBottomBorder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />


    <EditText
        android:id="@+id/etItemDetails"
        android:layout_width="400dp"
        android:layout_height="393dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:forceHasOverlappingRendering="false"
        android:gravity="start|top"
        android:hint="@string/details"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <Button
        android:id="@+id/btnDateTime"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_border"
        android:padding="12dp"
        android:text="@string/default_date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="395dp"
        android:layout_height="55dp"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/black"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="395dp"
        android:layout_height="55dp"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/black"
        android:text="@string/button_cancel"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>